--- a/style.css
+++ b/style.css
@@ -3,21 +3,14 @@ body {
     height: 100%;
 }
 
-body {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    background-color: #e9ecef;
-}
+
 
 .form-signin {
     width: 100%;
     max-width: 330px;
     padding: 15px;
     margin: auto;
+    margin-top: 20%;
 }
 .form-signin .checkbox {
     font-weight: 400;
